Ajout d'une categorie

--- a/templates/globe_trotter/home.html.twig
+++ b/templates/globe_trotter/home.html.twig
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="/new">Ajouter un voyage</a>
                 </li> 
                 <li class="nav-item">
-                    <a class="nav-link" href="">Ajouter une catégorie de voyage</a>
+                    <a class="nav-link" href="newCategory">Ajouter une catégorie de voyage</a>
                 </li>   
         </div>
 </nav>
