--- a/templates/globe_trotter/home.html.twig
+++ b/templates/globe_trotter/home.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %} <p>GlobeTrotter<p>{% endblock %}
 
 {% block body %}
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="/">Travel & Gossip</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
