--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,25 @@
     </head>
     <body>
         {% block body %}
-        
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="/">Travel & Gossip</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/traveling">Les voyages <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/new">Ajouter un voyage</a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link" href="/newCategory">Ajouter une catégorie de voyage</a>
+                </li>   
+        </div>
+</nav>
         {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
