--- a/templates/globe_trotter/index.html.twig
+++ b/templates/globe_trotter/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="/">Travel & Gossip</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,33 +19,11 @@
                     <a class="nav-link" href="/new">Ajouter un voyage</a>
                 </li> 
                 <li class="nav-item">
-                    <a class="nav-link" href="/category">Ajouter une catégorie de voyage</a>
+                    <a class="nav-link" href="/newCategory">Ajouter une catégorie de voyage</a>
                 </li>   
         </div>
 </nav>
 
-<div class="alert alert-dismissible alert-light">
-  <h4 class="alert-heading">Affinez la recherche</h4>
-  <form>
-  <fieldset>
-    <div class="form-group">
-      <label for="exampleSelect1">Example select</label>
-      <select class="form-control" id="exampleSelect1">
-        <option>Culinaire</option>
-        <option>Aventure</option>
-        <option>Detente</option>
-      </select>
-      <label for="exampleSelect1">Example select</label>
-      <select class="form-control" id="exampleSelect1">
-        <option>Maroc</option>
-        <option>Chine</option>
-        <option>Japon</option>
-      </select>
-    </div>    
-    <button class="btn btn-primary" type="submit">Submit</button>
-  </fieldset>
-</form>
-</div>
 
 <section class="articles">
 <h2>Les voyages</h2>
@@ -58,8 +37,10 @@
             <hr class="my-4">
             <p>{{article.category.name | raw}}</p>
             <p>{{article.Resume}}</p>
+            <p>{{article.dateTime}}</p>
             <p class="lead">
             <a class="btn btn-primary btn-lg" href="{{path('edit', {'article': article , 'id': article.id}) }}" role="button">Modifier</a>
+            <a class="btn btn-primary btn-lg" href="{{path('deleteTravel', {'id': article.id}) }}" role="button">Supprimer</a>
             </p>
             </div>
                   
