--- a/templates/globe_trotter/home.html.twig
+++ b/templates/globe_trotter/home.html.twig
@@ -27,7 +27,7 @@
 
 
         <div class="jumbotron">
-        <h1 class="display-3">Travel & Gossip</h1>
+        <h1 class="display-3">GlobeTrotter</h1>
         <p class="lead">Ce site permettra de rédiger des petites fiches critique voyages , ils sont rangés par catégorie.Que vous soyez à la recherche
         d'une desitnation détente , culinaire ou que vous soyez plutôt aventurier. Vous pourrez découvrir de nombreuses critiques et en partager de nouvelles.</p>
         <hr class="my-4">
