--- a/templates/globe_trotter/new.html.twig
+++ b/templates/globe_trotter/new.html.twig
@@ -22,7 +22,7 @@
                 </li>   
         </div>
     </nav>
-    
+    <img src="https://cdn-images-1.medium.com/max/1200/1*kfoZJqoU5IDWz-u7ZclDtQ.jpeg" width = 1550px height =400px></img>
     <div class="jumbotron">
 
     {% if editMode %}
