--- a/templates/globe_trotter/newCategory.html.twig
+++ b/templates/globe_trotter/newCategory.html.twig
@@ -22,7 +22,7 @@
                 </li>   
         </div>
     </nav>
-    
+     <img src="https://i1.wp.com/travelshopgirl.com/wp-content/uploads/2014/06/wishyouwerehere.png?w=1037&h=471&crop&ssl=1" width = 1500px height=400px></img>     
     <div class="jumbotron">
 
     
