--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,18 +4,20 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css"> </link>
+        <!--<link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css"> </link>-->
+        
+        <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css"> </link>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
         {% block body %}
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <a class="navbar-brand" href="/">Travel & Gossip</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor01">
+        <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="/traveling">Les voyages <span class="sr-only">(current)</span></a>
