--- a/templates/globe_trotter/home.html.twig
+++ b/templates/globe_trotter/home.html.twig
@@ -21,6 +21,9 @@
                 </li> 
                 <li class="nav-item">
                     <a class="nav-link" href="/newCategory">Ajouter une catégorie de voyage</a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link" href="/Categories">Les categories</a>
                 </li>   
         </div>
 </nav>
