--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,10 @@
                 </li> 
                 <li class="nav-item">
                     <a class="nav-link" href="/newCategory">Ajouter une catégorie de voyage</a>
-                </li>   
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Categories">Les categories</a>
+                </li>    
         </div>
 </nav>
         {% endblock %}
