--- a/templates/globe_trotter/index.html.twig
+++ b/templates/globe_trotter/index.html.twig
@@ -20,6 +20,9 @@
                 </li> 
                 <li class="nav-item">
                     <a class="nav-link" href="/newCategory">Ajouter une catégorie de voyage</a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link" href="/Categories">Les categories</a>
                 </li>   
         </div>
 </nav>
